[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calinet-artifacts"
version = "0.1.0"
description = "Artifact annotation tools for BIDS physio data"
authors = [{name="Calinet"}]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
gui = [
    "PySide6",
    "pyqtgraph"
]

[project.scripts]
calinet-artifacts = "calinet_artifacts.cli:main"