[build-system]
requires = ["setuptools>=61.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calinet-artifacts"
dynamic = ["version"]
description = "Artifact annotation tools for BIDS physio data"
authors = [{ name = "Calinet" }]
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "calinet @ git+https://github.com/gjheij/calinet-main.git"
]

[project.optional-dependencies]
gui = [
    "PySide6",
    "pyqtgraph"
]

[tool.setuptools_scm]
write_to = "src/calinet_artifacts/version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["calinet_artifacts*"]

[tool.setuptools.package-data]
calinet_artifacts = ["version.py"]

[project.scripts]
calinet-artifacts = "calinet_artifacts.cli:main"